# bids-derivatives

./: .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini
.github/workflows/: .package_tests.yml  codeql.yml  github-actions.yml  github-workflow.yml  package_workflow.yml
ci/: bootstrap.py  requirements.txt
docs/: conf.py  installation.rst  usage.rst
docs/reference/: bids_derivatives.rst  index.rst
src/bids_derivatives/: __main__.py  cli.py
src/bids_derivatives/bids_apps/apps/qsiprep/: qsiprep.py
src/bids_derivatives/bids_apps/outputs/: outputs.py
src/bids_derivatives/bids_apps/outputs/qsiprep/: __init__.py  qsiprep.json  qsiprep.py
src/bids_derivatives/bids_apps/outputs/templates/: __init__.py  spaces.py
src/bids_derivatives/bids_apps/qsiprep/: config.json  outputs.py
src/bids_derivatives/dataset/: __init__.py  dataset.py  messages.py  utils.py
src/bids_derivatives/derivative/: __init__.py  derivative.py  derivative_layout.py  messages.py
src/bids_derivatives/utils/: logs.py
src/bids_derivatives/utils/templates/: __init__.py  bids.py
tests/: fixtures.py  test_bids_derivatives.py  test_single_derivative.py
tests/data/derivatives/qsiprep/: dataset_description.json
tests/data/derivatives/qsiprep_invalid/: dataset_description.json
