[metadata]
name = bids_derivatives
version = 0.0.1
author = Gal Ben-Zvi
author_email = benzvigal@gmail.com
description = Python package for querying BIDS Apps` processed derivatives.
long_description = file: README.rst
long_description_content_type = text/x-rst
license = Apache-2.0
license_files = LICENSE
keywords = mri, preprocessing, neuroscience, BIDS
url = https://github.com/GalBenZvi/bids-derivatives
project_urls =
    Source = https://github.com/GalBenZvi/bids-derivatives
    ; Documentation = https://dicom-parser.readthedocs.io/en/latest/
    Bug Reports = https://github.com/GalBenZvi/bids-derivatives/issues/
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
package_dir =
    = src
include_package_data=True
packages = find:
python_requires = >=3.8, <4
install_requires =
    parse~=1.19

[options.extras_require]
dist =
    build
    twine
docs =
    sphinx~=4.5
    sphinx-rtd-theme~=1.0
test =
    coverage[toml]>=6.2
    pytest~=7.1
    tox~=3.24
dev =
    black~=22.3
    doc8~=0.10
    flake8~=4.0
    ipython
    isort~=5.10
    pre-commit
    pre-commit-hooks
    %(docs)s
    %(test)s
all =
    %(dev)s
    %(dist)s

[options.packages.find]
where = src

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 79
max-complexity = 10
exclude =
    __pycache__,
    .git,
    .pytest_cache,
    .tox,
    build,
    dist,
    tests,
    venv
per-file-ignores =
    */__init__.py: F401
    */messages.py: E501

[tool:pytest]
# If a pytest section is found in one of the possible config files
# (pytest.ini, tox.ini or setup.cfg), then pytest will not look for any others,
# so if you add a pytest config section elsewhere,
# you will need to delete this section from setup.cfg.
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
force_single_line = False
line_length = 79
profile = black
known_first_party = bids_derivatives
default_section = THIRDPARTY
forced_separate = test_bids_derivatives
skip = .tox,.eggs,ci/templates,build,dist
